--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ header{
     justify-content: space-around;
     background: rgba(0,0,0,0.8);
     font-family: 'Poppins', sans-serif;
+    z-index: 10;
 }
 nav{
     height: inherit;
@@ -52,7 +53,7 @@ nav a{
     z-index: -1;
     position: relative;
     height: 350px;
-    background: radial-gradient(farthest-corner at 20% 40%, rgb(255, 255, 255) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: radial-gradient(farthest-corner at 20% 40%, rgb(204, 204, 204) 0%, rgba(0, 0, 0, 0.8) 100%);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -62,6 +63,7 @@ nav a{
     margin-left: 100px;
     z-index: 1;
     color: rgba(0,0,0,0.9);
+    color: white;
 }
 .backgroundHeader h1{
     font-size: 3.5em;
@@ -89,9 +91,4 @@ nav a{
     width: 10px;
     height: 10px;
     z-index: -1;
-}
-
-
-main{
-    background: white;
 }
