--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,20 @@ nav a:hover{
     color: white;
     transition: color 0.5s;
 }
+.login{
+    color: white;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.login ion-icon{
+    font-size: 1.5em;
+    transition: all 0.4s;
+}
+.login ion-icon:hover{
+    transform: scale(1.1);
+    transition: all 0.4s;
+}
 .loginConnexion{
     border: solid;
     background: transparent;
@@ -91,8 +105,7 @@ nav a:hover{
     transform: translateY(0px);
     top: -150px;
     border-radius: 50%;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.7);
-    
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.7);  
 }
 .bulle{
     position: absolute;
